# foobar

./: CMakeLists.txt  CONTRIBUTING.md  README.md  stamp.sh
.github/: CODEOWNERS
.github/workflows/: catch2_exemplar_test.yml  ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml
cookiecutter/{{cookiecutter.project_name}}/: README.md
examples/: CMakeLists.txt  todo.cpp
include/beman/foobar/: CMakeLists.txt  foobar.hpp  todo.hpp
include/beman/my_project_name/: CMakeLists.txt  my_project_name.hpp  todo.hpp
tests/beman/foobar/: CMakeLists.txt  todo.test.cpp
tests/beman/my_project_name/: CMakeLists.txt  todo.test.cpp
